test/regtest/goldens/errors/unresolved_symbol2.ir
Error: Error: неопределённый идентификатор `впред` @ Line: 3, Byte: 2, Column: 2

